<resources>
    <string name="app_name">My Application</string>
    <string name="chats">Minhas conversas</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="save">Salvar</string>
    <string name="updateChat">Atualizar Chat</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="confirmPassword">Confirme sua senha</string>
    <string name="insertUser">Cadastrar Usuário</string>
    <string name="addChat">Adicione um chat</string>
    <string name="addUser">Adicione um Usuário</string>
    <string name="name">Nome</string>
    <string name="add">ADD</string>
    <string name="myChats">Minhas Conversas</string>
    <string name="makeLogin">Logar-se</string>
    <string name="newUser">Novo Usuário</string>
    <string name="messages">Mensagens do chat</string>
</resources>
