<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chat.matheus.chatnotification.activities.ChatsActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="498dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/myChats"
                    android:textSize="20dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="10dp"
                    android:onClick="adicionar"
                    android:text="@string/add" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="1dp"
                    android:onClick="atualizar"
                    android:text="@string/updateChat" />

            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/listLayout"
            android:layout_width="match_parent"
            android:layout_height="465dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
